--- a/jupyter/SegundaQuestaoJamilGomes.ipynb
+++ b/jupyter/SegundaQuestaoJamilGomes.ipynb
@@ -18,9 +18,9 @@
     "A regra de Cramer é aplicada quando o sistema é linear e o  <b>número de equações</b> é igual ao  <b>número de incógnitas</b>\n",
     "<br>\n",
     "Suponha o seguinte sistema de equações:<br>\n",
-    "<img src =\"imgs/sistema-linear-modelo.png\"><br> que escrevendo na forma matricial,<br> <img src =\"imgs/sistema-linear-modelo-matricial.jpg\"><br>\n",
+    "<img src =\"imgs\\sistema-linear-modelo.png\"><br> que escrevendo na forma matricial,<br> <img src =\"imgs\\sistema-linear-modelo-matricial.jpg\"><br>\n",
     "Para calcularmos os valores de x1,...,xn, em primeiro lugar é preciso calcular a determinante de A.<br> Em seguida, são montadas as matrizes dos determinantes para os cálculos de x1, x2,...,xn,  respecticamente, A1, A2,..., An.<br><img src =\"imgs/determinantes.jpeg\"><br> \n",
-    "A solução do sistema é dada pelos valores de x1, x2,...,xn, que são calculados da seguinte maneira:<br><img src =\"imgs/calculos.jpeg\"><br><br>\n",
+    "A solução do sistema é dada pelos valores de x1, x2,...,xn, que são calculados da seguinte maneira:<br><img src =\"imgs\\calculos.jpeg\"><br><br>\n",
     "Em numpy esse método é resolvido da seguinte maneira:<br>"
    ]
   },
@@ -90,12 +90,12 @@
    "source": [
     "<h1>Resolução de problemas pela matriz inversa</h1>\n",
     "<br>\n",
-    "A fórmula  do sistema de equação é Ax = B. Se multiplicarmos ambos os ladfos da equação pela inversaa de A, teremos:<br>\n",
-    "<img src = \"imgs/inversa.jpeg\"><br>\n",
+    "A fórmula  do sistema de equação é Ax = B. Se multiplicarmos ambos os lados da equação pela inversaa de A, teremos:<br>\n",
+    "<img src = \"imgs\\inversa.jpeg\"><br>\n",
     "Como <b>A-¹. A = 1</b>, a nossa expressão ficará:<br>\n",
-    "<img src = \"imgs/inversa2.jpeg\"><br>\n",
+    "<img src = \"imgs\\inversa2.jpeg\"><br>\n",
     "Por fim, temos que a inversa de  uma matriz é:<br>\n",
-    "<img src = \"imgs/inversa3.jpeg\"><br><br>\n",
+    "<img src = \"imgs\\inversa3.jpeg\"><br><br>\n",
     "Em numpy o seguinte método foi resolvido da seguinte maneira:\n"
    ]
   },
